# test_task_okx_news_parser

./: .gitattributes  .gitignore  README.md  entrypoint.py  pyproject.toml
src/: dto.py  service.py
src/api/: cli.py
src/common/: backoff.py
src/domain/: page_provider.py  parser.py  result_saver.py
src/infrastructure/: config.py  logger.py
tests/common/: test_backoff.py
tests/domain/: test_body.html  test_headlines_data.html  test_page_provider.py  test_parser.py  test_result_saver.py
