[project]
name = "okx-parser"
version = "0.1.0"
description = "test task with okx news parser"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "async-lru>=2.0.5",
    "bs4>=0.0.2",
    "click>=8.1.8",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.26.0",
    "pytest>=8.3.5",
]
